ci: new project

--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
   },
   "private": true,
   "dependencies": {
+    "@prisma/client": "^5.2.0",
     "axios": "^1.0.0",
+    "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "dotenv": "^16.3.1",
     "express": "~4.18.1",
-    "tslib": "^2.3.0"
+    "jsonwebtoken": "^9.0.1",
+    "morgan": "^1.10.0",
+    "tslib": "^2.3.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@nx/esbuild": "16.6.0",
