--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ DATABASE_URL="postgresql://mohammad.qebalah:@localhost:5432/mydb?schema=public"
 
 # jwt
 JWT_SECRET="secret"
+
+# sentry
+SENTRY_DSN="https://16d4e666ab4ca2dcae08ef4ca351570c@o4505775099936768.ingest.sentry.io/4505775101771776"
