--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "private": true,
   "dependencies": {
     "@prisma/client": "^5.2.0",
+    "@sentry/node": "^7.64.0",
+    "@sentry/tracing": "^7.64.0",
     "axios": "^1.0.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
@@ -18,6 +20,7 @@
     "express": "~4.18.1",
     "jsonwebtoken": "^9.0.1",
     "morgan": "^1.10.0",
+    "socket.io": "^4.7.2",
     "tslib": "^2.3.0",
     "uuid": "^9.0.0"
   },
@@ -32,6 +35,7 @@
     "@types/express": "~4.17.13",
     "@types/jest": "^29.4.0",
     "@types/node": "~18.7.1",
+    "@types/socket.io": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
     "esbuild": "^0.17.17",
